--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.victorhom.flickster.MovieActivity">
+    tools:context="com.example.victorhom.flickster.MovieActivity"
+    android:background="@color/movieGray">
 
     <!--after including supp-v4 in build.gradle, you should wrap the listview with the SwipeRefreshLayout tag-->
     <android.support.v4.widget.SwipeRefreshLayout
@@ -22,7 +23,8 @@
         android:id="@+id/lvMovies"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="@color/movieGray"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
