--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.victorhom.flickster.MovieActivity"
+    tools:context=".Activity.MovieActivity"
     android:background="@color/movieGray">
 
     <!--after including supp-v4 in build.gradle, you should wrap the listview with the SwipeRefreshLayout tag-->
